dashboard view lan updated

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -112,6 +112,8 @@
 		"topClientSpent": "Total Spent",
 		"topClientOrders": "Orders",
 		"avgSales": "Sales Average",
+		"avgSalesLast30": "Sales Average (Last 30 days)",
+		"avgSalesMonth": "Sales Average ({month})",
 		"avgDaily": "Daily",
 		"avgWeekly": "Weekly",
 		"avgMonthly": "Monthly",
@@ -119,13 +121,27 @@
 		"orders": "Orders",
 		"products": "Products",
 		"income": "Income",
+		"ingresos": "Revenue",
+		"beneficio": "Profit",
+		"rentabilidad": "Profitability",
+		"ticketPromedio": "Avg ticket",
+		"promedioMovil": "Moving Average",
 		"lowStock": "Low Stock",
 		"critical": "critical products",
 		"periodIncome": "Period Income",
 		"totalSales": "total sales",
 		"inventory": "Inventory",
 		"available": "available products",
-		"noSales": "No sales"
+		"noSales": "No sales",
+		"btnBack": "Back",
+		"first7Days": "First 7 days",
+		"first15Days": "First 15 days",
+		"wholeMonth": "Whole month",
+		"firstDays": "First {days} days",
+		"noDataAvailable": "No data available",
+		"clickForDetail": "Click for daily detail →",
+		"vsPreviousMonth": "vs previous month",
+		"incomeAxis": "Revenue ($)"
 	},
 	"sales": {
 		"new": {
