--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -112,6 +112,8 @@
 		"topClientSpent": "Total Gastado",
 		"topClientOrders": "Compras",
 		"avgSales": "Promedio de Ventas",
+		"avgSalesLast30": "Promedio de Ventas (Últimos 30 días)",
+		"avgSalesMonth": "Promedio de Ventas ({month})",
 		"avgDaily": "Diario",
 		"avgWeekly": "Semanal",
 		"avgMonthly": "Mensual",
@@ -119,13 +121,27 @@
 		"orders": "Órdenes",
 		"products": "Productos",
 		"income": "Ingreso",
+		"ingresos": "Ingresos",
+		"beneficio": "Beneficio",
+		"rentabilidad": "Rentabilidad",
+		"ticketPromedio": "Ticket promedio",
+		"promedioMovil": "Promedio Móvil",
 		"lowStock": "Stock Bajo",
 		"critical": "productos críticos",
 		"periodIncome": "Ingresos del Período",
 		"totalSales": "total ventas",
 		"inventory": "Inventario",
 		"available": "productos disponibles",
-		"noSales": "Sin ventas"
+		"noSales": "Sin ventas",
+		"btnBack": "Volver",
+		"first7Days": "Primeros 7 días",
+		"first15Days": "Primeros 15 días",
+		"wholeMonth": "Todo el mes",
+		"firstDays": "Primeros {days} días",
+		"noDataAvailable": "No hay datos disponibles",
+		"clickForDetail": "Click para ver detalle diario →",
+		"vsPreviousMonth": "vs mes anterior",
+		"incomeAxis": "Ingresos ($)"
 	},
 	"sales": {
 		"new": {
