--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -112,6 +112,8 @@
 		"topClientSpent": "Total Gasto",
 		"topClientOrders": "Compras",
 		"avgSales": "Média de Vendas",
+		"avgSalesLast30": "Média de Vendas (Últimos 30 dias)",
+		"avgSalesMonth": "Média de Vendas ({month})",
 		"avgDaily": "Diária",
 		"avgWeekly": "Semanal",
 		"avgMonthly": "Mensal",
@@ -119,13 +121,27 @@
 		"orders": "Pedidos",
 		"products": "Produtos",
 		"income": "Receita",
+		"ingresos": "Receita",
+		"beneficio": "Lucro",
+		"rentabilidad": "Rentabilidade",
+		"ticketPromedio": "Ticket médio",
+		"promedioMovil": "Média Móvel",
 		"lowStock": "Estoque Baixo",
 		"critical": "produtos críticos",
 		"periodIncome": "Receita do Período",
 		"totalSales": "total de vendas",
 		"inventory": "Inventário",
 		"available": "produtos disponíveis",
-		"noSales": "Sem vendas"
+		"noSales": "Sem vendas",
+		"btnBack": "Voltar",
+		"first7Days": "Primeiros 7 dias",
+		"first15Days": "Primeiros 15 dias",
+		"wholeMonth": "Mês inteiro",
+		"firstDays": "Primeiros {days} dias",
+		"noDataAvailable": "Sem dados disponíveis",
+		"clickForDetail": "Clique para ver detalhes diários →",
+		"vsPreviousMonth": "vs mês anterior",
+		"incomeAxis": "Receita ($)"
 	},
 	"sales": {
 		"new": {
