--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -35,6 +35,8 @@
 			"title": "Product List",
 			"nroParte": "Part Number",
 			"description": "Description",
+			"brand": "Brand",
+			"location": "Location",
 			"quantity": "Quantity",
 			"priceVenta": "Sale Price",
 			"precioCosto": "Cost Price",
@@ -56,6 +58,7 @@
 			"next": "Next",
 			"filterByNroParte": "Filter by Part Number",
 			"filterByDescription": "Filter by Description",
+			"filterByBrand": "All brands",
 			"noImage": "No image",
 			"zoomImage": "Click to view full size",
 			"deleteConfirmTitle": "Confirm delete",
@@ -68,6 +71,9 @@
 			"search": "Search by Part Number",
 			"nroParte": "Part Number",
 			"description": "Description",
+			"brand": "Brand",
+			"selectBrand": "Select a brand",
+			"location": "Location",
 			"quantity": "Quantity",
 			"price": "Sale Price",
 			"precioCosto": "Cost Price",
@@ -78,6 +84,7 @@
 			"save": "Create Product",
 			"placeholderNroParte": "P-001",
 			"placeholderDescription": "Product description",
+			"placeholderLocation": "e.g. Warehouse A-01",
 			"placeholderQuantity": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "21",
@@ -154,6 +161,8 @@
 		"new": {
 			"title": "New Sale",
 			"searchProduct": "Search product by Part Number",
+			"brandFilter": "Brand",
+			"brandAll": "All brands",
 			"searchPlaceholder": "Ex: P-001",
 			"enterKey": "Press Enter to add",
 			"tableTitle": "Sale Products",
@@ -161,6 +170,7 @@
 				"image": "Image",
 				"nroParte": "Part Number",
 				"description": "Description",
+				"brand": "Brand",
 				"quantity": "Quantity",
 				"iva": "TAX",
 				"unitPrice": "Unit Price",
