--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -35,6 +35,8 @@
 			"title": "Lista de Produtos",
 			"nroParte": "Número da Peça",
 			"description": "Descrição",
+			"brand": "Marca",
+			"location": "Localização",
 			"quantity": "Quantidade",
 			"priceVenta": "Preço de Venda",
 			"precioCosto": "Preço de Custo",
@@ -56,6 +58,7 @@
 			"next": "Próximo",
 			"filterByNroParte": "Filtrar por Número da Peça",
 			"filterByDescription": "Filtrar por Descrição",
+			"filterByBrand": "Todas as marcas",
 			"noImage": "Sem imagem",
 			"zoomImage": "Clique para ver em tamanho completo",
 			"deleteConfirmTitle": "Confirmar exclusão",
@@ -68,6 +71,9 @@
 			"search": "Pesquisar por Número da Peça",
 			"nroParte": "Número da Peça",
 			"description": "Descrição",
+			"brand": "Marca",
+			"selectBrand": "Selecione uma marca",
+			"location": "Localização",
 			"quantity": "Quantidade",
 			"price": "Preço de Venda",
 			"precioCosto": "Preço de Custo",
@@ -78,6 +84,7 @@
 			"save": "Criar Produto",
 			"placeholderNroParte": "P-001",
 			"placeholderDescription": "Descrição do produto",
+			"placeholderLocation": "Ex: Armazém A-01",
 			"placeholderQuantity": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "0.21",
@@ -154,6 +161,8 @@
 		"new": {
 			"title": "Nova Venda",
 			"searchProduct": "Pesquisar produto por Número da Peça",
+			"brandFilter": "Marca",
+			"brandAll": "Todas as marcas",
 			"searchPlaceholder": "Ex: P-001",
 			"enterKey": "Pressione Enter para adicionar",
 			"tableTitle": "Produtos da Venda",
@@ -161,6 +170,7 @@
 				"image": "Imagem",
 				"nroParte": "Número da Peça",
 				"description": "Descrição",
+				"brand": "Marca",
 				"quantity": "Quantidade",
 				"iva": "IVA",
 				"unitPrice": "Preço Unit.",
