--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -35,6 +35,8 @@
 			"title": "Listado de Productos",
 			"nroParte": "Nro de Parte",
 			"description": "Descripción",
+			"brand": "Marca",
+			"location": "Ubicación",
 			"quantity": "Cantidad",
 			"priceVenta": "Precio Venta",
 			"precioCosto": "Precio Costo",
@@ -56,6 +58,7 @@
 			"next": "Siguiente",
 			"filterByNroParte": "Filtrar por NroParte",
 			"filterByDescription": "Filtrar por Descripción",
+			"filterByBrand": "Todas las marcas",
 			"noImage": "Sin imagen",
 			"zoomImage": "Click para ver en tamaño completo",
 			"deleteConfirmTitle": "Confirmar eliminación",
@@ -68,6 +71,9 @@
 			"search": "Buscar por Nro de Parte",
 			"nroParte": "Nro de Parte",
 			"description": "Descripción",
+			"brand": "Marca",
+			"selectBrand": "Selecciona una marca",
+			"location": "Ubicación",
 			"quantity": "Cantidad",
 			"price": "Precio Venta",
 			"precioCosto": "Precio Costo",
@@ -78,6 +84,7 @@
 			"save": "Crear Producto",
 			"placeholderNroParte": "P-001",
 			"placeholderDescription": "Descripción del producto",
+			"placeholderLocation": "Ej: Almacén A-01",
 			"placeholderQuantity": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "21",
@@ -154,6 +161,8 @@
 		"new": {
 			"title": "Nueva Venta",
 			"searchProduct": "Buscar producto por Número de Parte",
+			"brandFilter": "Marca",
+			"brandAll": "Todas las marcas",
 			"searchPlaceholder": "Ej: P-001",
 			"enterKey": "Presiona Enter para agregar",
 			"tableTitle": "Productos de la Venta",
@@ -161,6 +170,7 @@
 				"image": "Imagen",
 				"nroParte": "Nro de Parte",
 				"description": "Descripción",
+				"brand": "Marca",
 				"quantity": "Cantidad",
 				"iva": "IVA",
 				"unitPrice": "Precio Unit.",
