marcas view created and implemented

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -25,9 +25,39 @@
 		"newProduct": "New Product",
 		"updateProduct": "Update",
 		"listProducts": "Product List",
+		"brands": "Brands",
 		"reports": "Reports",
 		"settings": "Settings",
 		"help": "Help"
+	},
+	"brands": {
+		"title": "Brands",
+		"name": "Name",
+		"status": "Status",
+		"actions": "Actions",
+		"create": "Create",
+		"editTitle": "Edit Brand",
+		"placeholderName": "e.g. Shell Rotella",
+		"required": "Name is required",
+		"statusActive": "Active",
+		"statusInactive": "Inactive",
+		"activate": "Reactivate",
+		"activated": "Brand reactivated",
+		"activatedMsg": "The brand was reactivated successfully",
+		"deactivated": "Brand deactivated",
+		"deactivatedMsg": "The brand was deactivated successfully",
+		"created": "Brand created",
+		"createdMsg": "The brand was created successfully",
+		"updated": "Brand updated",
+		"updatedMsg": "The brand was updated successfully",
+		"deleted": "Brand deleted",
+		"deletedMsg": "The brand was deleted successfully",
+		"deleteConfirm": "Do you want to delete this brand?",
+		"inUse": "Brand in use",
+		"inUseMsg": "Cannot delete. There are {count} products associated.",
+		"deactivateConfirm": "Do you want to deactivate the brand?",
+		"loadError": "Error loading brands",
+		"empty": "No brands available"
 	},
 	"products": {
 		"title": "Products",
