--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -25,9 +25,39 @@
 		"newProduct": "Nuevo producto",
 		"updateProduct": "Actualizar",
 		"listProducts": "Lista de productos",
+		"brands": "Marcas",
 		"reports": "Reportes",
 		"settings": "Configuración",
 		"help": "Ayuda"
+	},
+	"brands": {
+		"title": "Marcas",
+		"name": "Nombre",
+		"status": "Estado",
+		"actions": "Acciones",
+		"create": "Crear",
+		"editTitle": "Editar Marca",
+		"placeholderName": "Ej: Shell Rotella",
+		"required": "El nombre es obligatorio",
+		"statusActive": "Activa",
+		"statusInactive": "Inactiva",
+		"activate": "Reactivar",
+		"activated": "Marca reactivada",
+		"activatedMsg": "La marca se reactivó correctamente",
+		"deactivated": "Marca desactivada",
+		"deactivatedMsg": "La marca se desactivó correctamente",
+		"created": "Marca creada",
+		"createdMsg": "La marca se creó correctamente",
+		"updated": "Marca actualizada",
+		"updatedMsg": "La marca se actualizó correctamente",
+		"deleted": "Marca eliminada",
+		"deletedMsg": "La marca se eliminó correctamente",
+		"deleteConfirm": "¿Deseas eliminar esta marca?",
+		"inUse": "Marca en uso",
+		"inUseMsg": "No se puede eliminar. Hay {count} productos asociados.",
+		"deactivateConfirm": "¿Deseas desactivar la marca?",
+		"loadError": "Error al cargar marcas",
+		"empty": "No hay marcas registradas"
 	},
 	"products": {
 		"title": "Productos",
