--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -25,9 +25,39 @@
 		"newProduct": "Novo Produto",
 		"updateProduct": "Atualizar",
 		"listProducts": "Lista de Produtos",
+		"brands": "Marcas",
 		"reports": "Relatórios",
 		"settings": "Configurações",
 		"help": "Ajuda"
+	},
+	"brands": {
+		"title": "Marcas",
+		"name": "Nome",
+		"status": "Status",
+		"actions": "Ações",
+		"create": "Criar",
+		"editTitle": "Editar Marca",
+		"placeholderName": "Ex: Shell Rotella",
+		"required": "O nome é obrigatório",
+		"statusActive": "Ativa",
+		"statusInactive": "Inativa",
+		"activate": "Reativar",
+		"activated": "Marca reativada",
+		"activatedMsg": "A marca foi reativada com sucesso",
+		"deactivated": "Marca desativada",
+		"deactivatedMsg": "A marca foi desativada com sucesso",
+		"created": "Marca criada",
+		"createdMsg": "A marca foi criada com sucesso",
+		"updated": "Marca atualizada",
+		"updatedMsg": "A marca foi atualizada com sucesso",
+		"deleted": "Marca excluída",
+		"deletedMsg": "A marca foi excluída com sucesso",
+		"deleteConfirm": "Deseja excluir esta marca?",
+		"inUse": "Marca em uso",
+		"inUseMsg": "Não é possível excluir. Há {count} produtos associados.",
+		"deactivateConfirm": "Deseja desativar a marca?",
+		"loadError": "Erro ao carregar marcas",
+		"empty": "Não há marcas cadastradas"
 	},
 	"products": {
 		"title": "Produtos",
