min stock implemented

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -68,6 +68,7 @@
 			"brand": "Brand",
 			"location": "Location",
 			"quantity": "Quantity",
+			"stockMin": "Min stock",
 			"priceVenta": "Sale Price",
 			"precioCosto": "Cost Price",
 			"iva": "TAX",
@@ -105,6 +106,7 @@
 			"selectBrand": "Select a brand",
 			"location": "Location",
 			"quantity": "Quantity",
+			"stockMin": "Min stock",
 			"price": "Sale Price",
 			"precioCosto": "Cost Price",
 			"iva": "TAX/Rate",
@@ -116,6 +118,7 @@
 			"placeholderDescription": "Product description",
 			"placeholderLocation": "e.g. Warehouse A-01",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "21",
 			"placeholderImage": "image-name.jpg",
@@ -129,6 +132,7 @@
 			"button": "Update",
 			"placeholderSearch": "Ex: P-001",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderCostPrice": "0.00",
 			"placeholderIva": "21",
