--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -68,6 +68,7 @@
 			"brand": "Marca",
 			"location": "Localização",
 			"quantity": "Quantidade",
+			"stockMin": "Estoque mínimo",
 			"priceVenta": "Preço de Venda",
 			"precioCosto": "Preço de Custo",
 			"iva": "IVA",
@@ -105,6 +106,7 @@
 			"selectBrand": "Selecione uma marca",
 			"location": "Localização",
 			"quantity": "Quantidade",
+			"stockMin": "Estoque mínimo",
 			"price": "Preço de Venda",
 			"precioCosto": "Preço de Custo",
 			"iva": "IVA/Taxa",
@@ -116,6 +118,7 @@
 			"placeholderDescription": "Descrição do produto",
 			"placeholderLocation": "Ex: Armazém A-01",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "0.21",
 			"placeholderImage": "nome-imagem.jpg",
@@ -129,6 +132,7 @@
 			"button": "Atualizar",
 			"placeholderSearch": "Ex: P-001",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderCostPrice": "0.00",
 			"placeholderIva": "21",
