--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -68,6 +68,7 @@
 			"brand": "Marca",
 			"location": "Ubicación",
 			"quantity": "Cantidad",
+			"stockMin": "Stock mínimo",
 			"priceVenta": "Precio Venta",
 			"precioCosto": "Precio Costo",
 			"iva": "IVA",
@@ -105,6 +106,7 @@
 			"selectBrand": "Selecciona una marca",
 			"location": "Ubicación",
 			"quantity": "Cantidad",
+			"stockMin": "Stock mínimo",
 			"price": "Precio Venta",
 			"precioCosto": "Precio Costo",
 			"iva": "IVA/Tasa",
@@ -116,6 +118,7 @@
 			"placeholderDescription": "Descripción del producto",
 			"placeholderLocation": "Ej: Almacén A-01",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderIva": "21",
 			"placeholderImage": "nombre-imagen.jpg",
@@ -129,6 +132,7 @@
 			"button": "Actualizar",
 			"placeholderSearch": "Ej: P-001",
 			"placeholderQuantity": "0",
+			"placeholderStockMin": "0",
 			"placeholderPrice": "0.00",
 			"placeholderCostPrice": "0.00",
 			"placeholderIva": "21",
