min stock kpi and table implemented

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -173,6 +173,13 @@
 		"totalSales": "total sales",
 		"inventory": "Inventory",
 		"available": "available products",
+		"criticalTableTitle": "Critical stock products",
+		"criticalHeaderProduct": "Product",
+		"criticalHeaderBrand": "Brand",
+		"criticalHeaderLocation": "Location",
+		"criticalHeaderQty": "Stock",
+		"criticalHeaderMin": "Minimum",
+		"criticalEmpty": "No products in critical stock",
 		"noSales": "No sales",
 		"btnBack": "Back",
 		"first7Days": "First 7 days",
