--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -173,6 +173,13 @@
 		"totalSales": "total ventas",
 		"inventory": "Inventario",
 		"available": "productos disponibles",
+		"criticalTableTitle": "Productos en stock crítico",
+		"criticalHeaderProduct": "Producto",
+		"criticalHeaderBrand": "Marca",
+		"criticalHeaderLocation": "Ubicación",
+		"criticalHeaderQty": "Stock",
+		"criticalHeaderMin": "Mínimo",
+		"criticalEmpty": "No hay productos en stock crítico",
 		"noSales": "Sin ventas",
 		"btnBack": "Volver",
 		"first7Days": "Primeros 7 días",
