--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -173,6 +173,13 @@
 		"totalSales": "total de vendas",
 		"inventory": "Inventário",
 		"available": "produtos disponíveis",
+		"criticalTableTitle": "Produtos em estoque crítico",
+		"criticalHeaderProduct": "Produto",
+		"criticalHeaderBrand": "Marca",
+		"criticalHeaderLocation": "Localização",
+		"criticalHeaderQty": "Estoque",
+		"criticalHeaderMin": "Mínimo",
+		"criticalEmpty": "Não há produtos em estoque crítico",
 		"noSales": "Sem vendas",
 		"btnBack": "Voltar",
 		"first7Days": "Primeiros 7 dias",
