critic products view added

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -25,6 +25,7 @@
 		"newProduct": "New Product",
 		"updateProduct": "Update",
 		"listProducts": "Product List",
+		"criticalProducts": "Critical products",
 		"brands": "Brands",
 		"reports": "Reports",
 		"settings": "Settings",
@@ -61,6 +62,9 @@
 	},
 	"products": {
 		"title": "Products",
+		"critical": {
+			"title": "Critical products"
+		},
 		"list": {
 			"title": "Product List",
 			"nroParte": "Part Number",
@@ -169,6 +173,8 @@
 		"promedioMovil": "Moving Average",
 		"lowStock": "Low Stock",
 		"critical": "critical products",
+		"viewCriticals": "View criticals",
+		"viewProducts": "View products",
 		"periodIncome": "Period Income",
 		"totalSales": "total sales",
 		"inventory": "Inventory",
@@ -180,6 +186,20 @@
 		"criticalHeaderQty": "Stock",
 		"criticalHeaderMin": "Minimum",
 		"criticalEmpty": "No products in critical stock",
+		"criticalFilterSearch": "Search",
+		"criticalFilterSearchPlaceholder": "Part number or description",
+		"criticalFilterBrand": "Brand",
+		"criticalFilterLocation": "Location",
+		"criticalFilterSeverity": "Severity",
+		"criticalFilterBrandAll": "All brands",
+		"criticalFilterLocationAll": "All locations",
+		"criticalFilterLocationNone": "No location",
+		"criticalFilterSeverityAll": "All",
+		"criticalFilterSeverityZero": "Out of stock",
+		"criticalFilterSeverityBelowMin": "Below minimum",
+		"criticalFilterSeverityUnder2": "≤ 2 units",
+		"criticalPrev": "Previous",
+		"criticalNext": "Next",
 		"noSales": "No sales",
 		"btnBack": "Back",
 		"first7Days": "First 7 days",
