--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -25,6 +25,7 @@
 		"newProduct": "Nuevo producto",
 		"updateProduct": "Actualizar",
 		"listProducts": "Lista de productos",
+		"criticalProducts": "Productos críticos",
 		"brands": "Marcas",
 		"reports": "Reportes",
 		"settings": "Configuración",
@@ -61,6 +62,9 @@
 	},
 	"products": {
 		"title": "Productos",
+		"critical": {
+			"title": "Productos críticos"
+		},
 		"list": {
 			"title": "Listado de Productos",
 			"nroParte": "Nro de Parte",
@@ -169,6 +173,8 @@
 		"promedioMovil": "Promedio Móvil",
 		"lowStock": "Stock Bajo",
 		"critical": "productos críticos",
+		"viewCriticals": "Ver críticos",
+		"viewProducts": "Ver productos",
 		"periodIncome": "Ingresos del Período",
 		"totalSales": "total ventas",
 		"inventory": "Inventario",
@@ -180,6 +186,20 @@
 		"criticalHeaderQty": "Stock",
 		"criticalHeaderMin": "Mínimo",
 		"criticalEmpty": "No hay productos en stock crítico",
+		"criticalFilterSearch": "Buscar",
+		"criticalFilterSearchPlaceholder": "Nro parte o descripción",
+		"criticalFilterBrand": "Marca",
+		"criticalFilterLocation": "Ubicación",
+		"criticalFilterSeverity": "Severidad",
+		"criticalFilterBrandAll": "Todas las marcas",
+		"criticalFilterLocationAll": "Todas las ubicaciones",
+		"criticalFilterLocationNone": "Sin ubicación",
+		"criticalFilterSeverityAll": "Todas",
+		"criticalFilterSeverityZero": "Sin stock",
+		"criticalFilterSeverityBelowMin": "Bajo mínimo",
+		"criticalFilterSeverityUnder2": "≤ 2 unidades",
+		"criticalPrev": "Anterior",
+		"criticalNext": "Siguiente",
 		"noSales": "Sin ventas",
 		"btnBack": "Volver",
 		"first7Days": "Primeros 7 días",
