--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -25,6 +25,7 @@
 		"newProduct": "Novo Produto",
 		"updateProduct": "Atualizar",
 		"listProducts": "Lista de Produtos",
+		"criticalProducts": "Produtos críticos",
 		"brands": "Marcas",
 		"reports": "Relatórios",
 		"settings": "Configurações",
@@ -61,6 +62,9 @@
 	},
 	"products": {
 		"title": "Produtos",
+		"critical": {
+			"title": "Produtos críticos"
+		},
 		"list": {
 			"title": "Lista de Produtos",
 			"nroParte": "Número da Peça",
@@ -169,6 +173,7 @@
 		"promedioMovil": "Média Móvel",
 		"lowStock": "Estoque Baixo",
 		"critical": "produtos críticos",
+		"viewCriticals": "Ver críticos",
 		"periodIncome": "Receita do Período",
 		"totalSales": "total de vendas",
 		"inventory": "Inventário",
@@ -180,6 +185,18 @@
 		"criticalHeaderQty": "Estoque",
 		"criticalHeaderMin": "Mínimo",
 		"criticalEmpty": "Não há produtos em estoque crítico",
+		"criticalFilterSearch": "Buscar",
+		"criticalFilterSearchPlaceholder": "Número da peça ou descrição",
+		"criticalFilterBrand": "Marca",
+		"criticalFilterLocation": "Localização",
+		"criticalFilterSeverity": "Severidade",
+		"criticalFilterBrandAll": "Todas as marcas",
+		"criticalFilterLocationAll": "Todas as localizações",
+		"criticalFilterLocationNone": "Sem localização",
+		"criticalFilterSeverityAll": "Todas",
+		"criticalFilterSeverityZero": "Sem estoque",
+		"criticalFilterSeverityBelowMin": "Abaixo do mínimo",
+		"criticalFilterSeverityUnder2": "≤ 2 unidades",
 		"noSales": "Sem vendas",
 		"btnBack": "Voltar",
 		"first7Days": "Primeiros 7 dias",
