invoice date fixed

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -232,6 +232,7 @@
 				"nroParte": "Part Number",
 				"description": "Description",
 				"brand": "Brand",
+				"location": "Location",
 				"quantity": "Quantity",
 				"iva": "TAX",
 				"unitPrice": "Unit Price",
