--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -126,6 +126,7 @@
 			"placeholderPrice": "0.00",
 			"placeholderIva": "21",
 			"placeholderImage": "nombre-imagen.jpg",
+			"placeholderCostPrice": "0.00",
 			"principal": "Principal",
 			"addPartNumber": "+ Agregar Número de Parte",
 			"addPhoto": "+ Agregar Foto"
