new payment method implemented

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -275,6 +275,11 @@
 				"card": "Card",
 				"transfer": "Transfer",
 				"bizum": "Bizum",
+				"zelle": "Zelle",
+				"cashApp": "Cash app",
+				"paypal": "Pay pal",
+				"creditCard": "Credit card",
+				"debitCard": "Debit card",
 				"invoiceNumber": "Invoice Number",
 				"observations": "Observations",
 				"generate": "Generate Invoice",
