--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -273,6 +273,11 @@
 				"card": "Tarjeta",
 				"transfer": "Transferencia",
 				"bizum": "Bizum",
+				"zelle": "Zelle",
+				"cashApp": "Cash app",
+				"paypal": "Pay pal",
+				"creditCard": "Credit card",
+				"debitCard": "Debit card",
 				"invoiceNumber": "Número de Factura",
 				"observations": "Observaciones",
 				"generate": "Generar Factura",
