--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -268,6 +268,11 @@
 				"card": "Cartão",
 				"transfer": "Transferência",
 				"bizum": "Bizum",
+				"zelle": "Zelle",
+				"cashApp": "Cash app",
+				"paypal": "Pay pal",
+				"creditCard": "Credit card",
+				"debitCard": "Debit card",
 				"invoiceNumber": "Número da Fatura",
 				"observations": "Observações",
 				"generate": "Gerar Fatura",
